--- a/form/demo.html
+++ b/form/demo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Form</title>
+		<title>this is a Form</title>
 	</head>
 	<body>
 		<!-- 表单一 -->
