--- a/banner/demo.html
+++ b/banner/demo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Banner</title>
+		<title>this is a Banner</title>
 		<style>
 			.banner{
 				position:relative;
