--- a/code/demo.html
+++ b/code/demo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Code</title>
+		<title>this is a Code</title>
 		<style>
 			body{
 				padding-top:50px;
