--- a/dom/demo.html
+++ b/dom/demo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>this is a DOM</title>
+		<title>This is a DOM</title>
 	</head>
 	<body>
 		<ul>
